# trabalho-final-trabalho_final_comp

./: README.md  pyproject.toml
exemplos/: 01_hello_world.txt  02_variaveis.txt  03_operacoes.txt  04_condicional.txt  05_loop.txt  06_fibonacci.txt  07_busca_linear.txt  08_bubble_sort.txt
src/: __init__.py  lexer.py  main.py
tests/: __init__.py  test_lexer.py
